--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <!-- <link rel="stylesheet" href="background_styles.css"> -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Flexbox Example</title>
 </head>
 <body>
     <div class="flexbox-container">
-        <div class="flexbox-item-1"></div>
-        <div class="flexbox-item-2"></div>
-        <div class="flexbox-item-3"></div>
+        <div class="flexbox-item flexbox-item-1"></div>
+        <div class="flexbox-item flexbox-item-2"></div>
+        <div class="flexbox-item flexbox-item-3"></div>
     </div>
 </body>
 </html>
