--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- <link rel="stylesheet" href="background_styles.css"> -->
+    <link rel="stylesheet" href="css/background_styles.css">
     <link rel="stylesheet" href="css/styles.css">
     <title>Flexbox Example</title>
 </head>
